--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_affidavit_disclosing_care_or_custody_proceedings.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_affidavit_disclosing_care_or_custody_proceedings.yml
@@ -1,13 +1,9 @@
 ---
-include:
-  - docassemble.MAVirtualCourt:basic-questions.yml  
-  #- basic-questions.yml
----
 objects:
   - other_care_custody_proceedings: OtherProceedingList
   - signing_attorney: VCIndividual
   # - children: PeopleList.using(complete_attribute='child_complete')
-  - others_in_proceedings: PeopleList.using(auto_gather=False) # Formerly box8_people. People named as parties in other care/custody. We'll filter to remove dupes
+  - others_in_proceedings: PeopleList.using(auto_gather=False)
   - attorneys_for_children: PeopleList.using(auto_gather=False)
   - attorneys_for_children[i].represented_children: PeopleList
   - attorneys_for_parents: PeopleList.using(auto_gather=False)
@@ -17,10 +13,7 @@ code: |
   # This is a placeholder to control logic flow in this interview
   # It was generated from interview_generator.py as an 'interview order' type question.  
   basic_questions_intro_screen 
-  # A_affidavit_disclosing_care_or_custody_proceedings0009_intro # enable for standalone
-  # Set the preferred/allowed courts for this interview
-  # preferred_court = interview_metadata["A_affidavit_disclosing_care_or_custody_proceedings0009"]["preferred court"]
-  # allowed_courts = interview_metadata["A_affidavit_disclosing_care_or_custody_proceedings0009"]["allowed courts"]
+  # A_affidavit_disclosing_care_or_custody_proceedings0009_intro # enable for 
 
   defendants.there_are_any = True  
   case_name
@@ -310,426 +303,6 @@ code: |
 ---
 code: |
   user_role = 'plaintiff'
----
-mandatory: True
-code: |
-  interview_metadata # make sure we initialize the object
-  if not defined("interview_metadata['A_affidavit_disclosing_care_or_custody_proceedings0009']"):
-    interview_metadata.initializeObject('A_affidavit_disclosing_care_or_custody_proceedings0009')
-  interview_metadata['A_affidavit_disclosing_care_or_custody_proceedings0009'].update({
-    'title': 'Affidavit Disclosing Care or Custody Proceedings',
-    'short title': 'Affidavit of Care',
-    'description': 'Complete in 209As with children if required by page 2 of complaint, as well as in various probate proceedings',
-    'original_form': 'https://www.mass.gov/files/documents/2017/09/01/ocaj-aff-care-custody.pdf',
-    'allowed courts': [
-      'Boston Municipal Court',
-      'District Court',
-      'Probate and Family Court',
-      'Superior Court',
-    ],
-    'preferred court': 'Probate and Family Court',
-    'categories': [
-      'Domestic Violence / Safety of self',
-      'Family Law',
-    ],
-    'logic block variable': 'A_affidavit_disclosing_care_or_custody_proceedings0009',
-    'attachment block variable': 'A_affidavit_disclosing_care_or_custody_proceedings0009_attachment',
-    'typical role': 'plaintiff',
-    'built_in_fields_used': [
-      {'variable': 'docket_number',
-       'transformed_variable': 'docket_numbers[0]',
-      },
-      {'variable': 'user_name_full',
-       'transformed_variable': 'str(users[0])',
-      },
-      {'variable': 'child1_address_on_one_line',
-       'transformed_variable': 'children[1-1].address.on_one_line(include_unit=True)',
-      },
-      {'variable': 'child2_address_on_one_line',
-       'transformed_variable': 'children[2-1].address.on_one_line(include_unit=True)',
-      },
-      {'variable': 'child3_address_on_one_line',
-       'transformed_variable': 'children[3-1].address.on_one_line(include_unit=True)',
-      },
-      {'variable': 'user_address_on_one_line',
-       'transformed_variable': 'users[0].address.on_one_line(include_unit=True)',
-      },
-      {'variable': 'user_signature',
-       'transformed_variable': 'users[0].signature',
-      },
-      {'variable': 'user_name_full__1',
-       'transformed_variable': 'str(users[0])',
-      },
-      {'variable': 'child1_address_street',
-       'transformed_variable': 'children[1-1].address.address',
-      },
-      {'variable': 'child1_address_city_state_zip',
-       'transformed_variable': 'children[1-1].address.line_two()',
-      },
-      {'variable': 'child2_address_street',
-       'transformed_variable': 'children[2-1].address.address',
-      },
-      {'variable': 'child2_address_city_state_zip',
-       'transformed_variable': 'children[2-1].address.line_two()',
-      },
-      {'variable': 'child3_address_street',
-       'transformed_variable': 'children[3-1].address.address',
-      },
-      {'variable': 'child3_address_city_state_zip',
-       'transformed_variable': 'children[3-1].address.line_two()',
-      },
-      {'variable': 'user_address_on_one_line__2',
-       'transformed_variable': 'users[0].address.on_one_line(include_unit=True)',
-      },
-      ],
-    'fields': [
-      {'variable': 'case_name',
-       'transformed_variable': 'case_name',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'court_division_bmc',
-       'transformed_variable': 'courts[0].division_bmc',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'court_division_district_court',
-       'transformed_variable': 'courts[0].division_district_court',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'court_division_juvenile_court',
-       'transformed_variable': 'courts[0].division_juvenile_court',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'court_division_family_court',
-       'transformed_variable': 'courts[0].division_family_court',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'court_division_superior_court',
-       'transformed_variable': 'courts[0].division_superior_court',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'child1_name_last_first',
-       'transformed_variable': 'children[1-1].name_last_first',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'child2_name_last_first',
-       'transformed_variable': 'children[2-1].name_last_first',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'child3_name_last_first',
-       'transformed_variable': 'children[3-1].name_last_first',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'confidential_address',
-       'transformed_variable': 'confidential_address',
-      'field_type': 'yesno',
-      },
-      {'variable': 'child1_past_addresses_on_one_line',
-       'transformed_variable': 'children[1-1].past_addresses_on_one_line',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'child2_past_addresses_on_one_line',
-       'transformed_variable': 'children[2-1].past_addresses_on_one_line',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'child3_past__addresses_on_one_line',
-       'transformed_variable': 'children[3-1].past_ addresses_on_one_line',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'has_participated_custody_case',
-       'transformed_variable': 'has_participated_custody_case',
-      'field_type': 'yesno',
-      },
-      {'variable': 'has_not_participated_custody_case',
-       'transformed_variable': 'has_not_participated_custody_case',
-      'field_type': 'yesno',
-      },
-      {'variable': 'know_of_other_custody_case',
-       'transformed_variable': 'know_of_other_custody_case',
-      'field_type': 'yesno',
-      },
-      {'variable': 'do_not_know_of_other_custody_case',
-       'transformed_variable': 'do_not_know_of_other_custody_case',
-      'field_type': 'yesno',
-      },
-      {'variable': 'other_case_3_user_role',
-       'transformed_variable': 'users[0].role_in_custody_case_child1',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_1_letters',
-       'transformed_variable': 'children[1-1].letter_a',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_1_court',
-       'transformed_variable': 'children[1-1].custody_court_name',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_1_docket',
-       'transformed_variable': 'children[1-1].custody_docket_number',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_1_status',
-       'transformed_variable': 'children[1-1].custody_case_status',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_2_user_role',
-       'transformed_variable': 'users[0].role_in_custody_case_child2',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_2_letters',
-       'transformed_variable': 'children[2-1].letter_b',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_2_court',
-       'transformed_variable': 'children[2-1].custody_court_name',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_2_docket',
-       'transformed_variable': 'children[2-1].custody_docket_number',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_2_status',
-       'transformed_variable': 'children[2-1].custody_case_status',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_3_user_role',
-       'transformed_variable': 'users[0].role_in_custody_case_child3',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_3_letters',
-       'transformed_variable': 'children[3-1].letter_c',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_3_court',
-       'transformed_variable': 'children[3-1].custody_court_name',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_3_docket',
-       'transformed_variable': 'children[3-1].custody_docket_number',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_3_status',
-       'transformed_variable': 'children[3-1].custody_case_status',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_other_parties_1_letters',
-       'transformed_variable': 'children[1-1].letter_a',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_other_parties_1_names',
-       'transformed_variable': 'other_parties[0].name_full_child1',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_other_parties_1_address_on_one_line',
-       'transformed_variable': 'other_parties[0].address_on_one_line_child1',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_other_parties_2_letters',
-       'transformed_variable': 'children[2-1].letter_b',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_other_parties_2_names',
-       'transformed_variable': 'other_parties[0].name_full_child2',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_other_parties_2_address_on_one_line',
-       'transformed_variable': 'other_parties[0].address_on_one_line_child2',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_other_parties_3_names',
-       'transformed_variable': 'other_parties[0].name_full_child3',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_other_parties_3_address_on_one_line',
-       'transformed_variable': 'other_parties[0].address_on_one_line_child3',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'other_case_3_letters__1',
-       'transformed_variable': 'children[3-1].letter_c',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'impound_affidavit',
-       'transformed_variable': 'impound_affidavit',
-      'field_type': 'yesno',
-      },
-      {'variable': 'day',
-       'transformed_variable': 'day',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'month',
-       'transformed_variable': 'month',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'year',
-       'transformed_variable': 'year',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'attorney_of_record_address_on_one_line',
-       'transformed_variable': 'attorney_of_record_address_on_one_line',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'child1_past_addresses_street',
-       'transformed_variable': 'children[1-1].past_addresses_street',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'child1_past_addresses_city_state_zip',
-       'transformed_variable': 'children[1-1].past_addresses_city_state_zip',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'child2_past_addresses_street',
-       'transformed_variable': 'children[2-1].past_addresses_street',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'child2_past_addresses_city_state_zip',
-       'transformed_variable': 'children[2-1].past_addresses_city_state_zip',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'child3_past_addresses_street',
-       'transformed_variable': 'children[3-1].past_addresses_street',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'child3_past_addresses_city_state_zip',
-       'transformed_variable': 'children[3-1].past_addresses_city_state_zip',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'attorney_for_children_or_child1__1',
-       'transformed_variable': 'attorneys[0].for_children_or_child1',
-      'field_type': 'yesno',
-      },
-      {'variable': 'attorney_for_children_or_child1__2',
-       'transformed_variable': 'attorneys[0].for_children_or_child1',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'attorney_for_child2_if_different',
-       'transformed_variable': 'attorneys[0].for_child2_if_different',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'attorney_for_child2',
-       'transformed_variable': 'attorneys[0].for_child2',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'attorney_for_child3_if_different',
-       'transformed_variable': 'attorneys[0].for_child3_if_different',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'attorney_for_child3',
-       'transformed_variable': 'attorneys[0].for_child3',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'gal_investigator1',
-       'transformed_variable': 'gal_investigator1',
-      'field_type': 'yesno',
-      },
-      {'variable': 'gal_for_child1',
-       'transformed_variable': 'gal_for_child1',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'gal_investigator2_if_different',
-       'transformed_variable': 'gal_investigator2_if_different',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'gal_for_child2',
-       'transformed_variable': 'gal_for_child2',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'gal_investigator3_if_different',
-       'transformed_variable': 'gal_investigator3_if_different',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'gal_for_child3',
-       'transformed_variable': 'gal_for_child3',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'attorney_for_mother_name_full__1',
-       'transformed_variable': 'attorneys[0].for_mother_name_full',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'attorney1_for_mother',
-       'transformed_variable': 'attorneys[1-1].for_mother',
-      'field_type': 'yesno',
-      },
-      {'variable': 'attorney2_for_mother',
-       'transformed_variable': 'attorneys[2-1].for_mother',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'attorney_for_mother_name_full__2',
-       'transformed_variable': 'attorneys[0].for_mother_name_full',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'attorney_for_father_name_full',
-       'transformed_variable': 'attorneys[0].for_father_name_full',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      {'variable': 'attorney_for_father',
-       'transformed_variable': 'attorneys[0].for_father',
-      'field_type': 'yesno',
-      },
-      {'variable': 'attorney_for_dfc_name_full',
-       'transformed_variable': 'attorneys[0].for_dfc_name_full',
-      'field_type': 'text',
-      'field_data_type': 'text',
-      },
-      ],
-  })
 ---
 question: |
   Confidential Address
