--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_defendant-information.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_defendant-information.yml
@@ -105,11 +105,9 @@ fields:
       is: "other"
     maxlength: 9     
 ---
-id: defendant vital stats
+id: defendant age
 question: |
-  ${other_parties.familiar()}'s physical appearance
-subquestion: |
-  Answer as many questions below as you can.  
+  How old is ${other_parties.familiar()}?
 fields:
   - I don't know when ${other_parties.familiar()} was born: dont_know_birthdate
     datatype: yesno
@@ -119,6 +117,13 @@ fields:
   - Best estimate of age (in years): other_parties[0].age
     datatype: integer
     show if: dont_know_birthdate
+---
+id: defendant vital stats
+question: |
+  ${other_parties.familiar()}'s physical appearance
+subquestion: |
+  Answer as many questions below as you can.
+fields:
   - "How tall is ${other_parties.familiar()}?": other_parties[0].height
     required: False
     hint: e.g., 5 foot 10 inches
@@ -496,7 +501,8 @@ code: |
   other_parties[0].photo_yes
   other_parties[0].race
   other_parties[0].eye_color # Needed if in the skip_sections code
-  other_parties[0].height  
+  other_parties[0].age
+  other_parties[0].height
   other_parties[0].photo_yes
 
   defendant_has_guns["gun"] # trigger our DADict question
