--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_review.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_review.yml
@@ -28,7 +28,10 @@ review:
       You said your relationship to ${users} is
       ${plaintiff_assistant_relationship_to_plaintiff}
       and your name is ${plaintiff_assistant_name}.
-  - Edit age: plaintiff_is_major_yes
+  - Edit age:
+      - users[0].birthdate
+      - recompute:
+        - plaintiff_is_major_yes
     button: |
       You said you
       % if plaintiff_is_major_yes:
