Adjusting language in questions up to affdivait to reflect  parent, guardian or advocate filing obo parent or guardian

--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_plaintiff-confidential.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_plaintiff-confidential.yml
@@ -241,10 +241,14 @@ id: contact information
 question: |
   Contact information
 subquestion: |
-  Put at least one way for the court to reach you below.
+  % if plaintiff_assistant_type_obo: 
+  ${ plaintiff_assistant_name }, since you are filing **for** ${ users.familiar() }, enter the best way for the court to contact information **you**. 
+  % endif
+  Give the court least one way to reach you.
 
-  You will have a chance to request this contact information
-  to be kept private later.
+  Later, you will get a chance to ask the court to keep this contact information
+  private.
+  
 fields:
   - Mobile number: users[0].mobile_number
     maxlength: 14
@@ -328,14 +332,22 @@ comment: |
   This question is used to introduce your interview. Please customize
 continue button field: A_Plaintiff_Confidential_Information0011_intro # SMEs to provide splash page language.
 question: |
+  % if plaintiff_assistant_type in ('parent', 'guardian') or plaintiff_assistant_type_obo:
+  Keeping information about you safe
+  % else:
   Getting and staying in touch with you
+  % endif
 subquestion: |
   The next questions ask for your home, work, school, email address and phone numbers. 
   
-  The court needs this information to:
   
+  % if plaintiff_assistant_type in ('parent', 'guardian') or plaintiff_assistant_type_obo:
+  The court needs this information to make an order that will help keep you as safe as possible.
+  % else:
+  The court needs this information to:
   * contact you about your case, and
   * make an order that will help keep you as safe as possible.
+  % endif
   
   ${other_parties.familiar()}, ${other_parties.familiar()}’s lawyer, and the public are not allowed to see this information about you.
   
