Add explicit sets for other_parties[0].name.gender

--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_page_1.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_page_1.yml
@@ -68,6 +68,7 @@ fields:
 sets:
   - other_parties[0].name.first
   - other_parties[0].name.last
+  - other_parties[0].gender
 id: name of abuser
 question: |
   What is the name of the person who is abusing you?  
