--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_page_1.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_page_1.yml
@@ -571,52 +571,6 @@ fields:
   - License to carry: defendant_has_guns['license']
     datatype: yesnomaybe
 ---
-depends on:
-  - defendant_has_guns
-  - defendant_weapons_description
-code: |
-  defendant_weapons = comma_list(defendant_has_guns.true_values()) + space('defendant_weapons_description', prefix=' - ')
-  defendant_weapons_safe_for_pdf = defendant_weapons + (" (see Addendum)" if len(defendant_weapons) > 40 else '')
----
-code: |
-  defendant_weapons_for_addendum = comma_list(defendant_has_guns.true_values()) + ( " Description of guns: " + defendant_weapons_description if defendant_has_guns["gun"] else '')
----
-code: |
-  need_gun_addendum = len(defendant_weapons) > 40
----
-# Unused
-code: |
-  need_relief_addendum =  len(other_relief) > 215 if order_other_relief_yes else False
----
-# Unused
-code: |
-  other_relief_safe_for_pdf = "(See Addendum.) " + other_relief[:215].replace("\r","").replace("\n","")
----
-code: |
-  # this is a single-line field in the pdf
-  losses_caused_by_defendant = losses_caused_by_defendant.replace("\r\n","").replace("\n","")
-
----
-# Unused - set a rediculous limit so it's never met.
-code: |
-  need_losses_addendum = len(losses_caused_by_defendant) > 2000 if order_defendant_pay_yes else False
----
-# Unused
-code: |
-  losses_caused_by_defendant_safe_for_pdf = "(See Addendum.) " + losses_caused_by_defendant[:100].replace("\r","").replace("\n","")
----
-code: |
-  need_cases_addendum = len(other_cases) > 1
----  
-code: |
-  cases_other_safe_for_pdf = comma_and_list([case.court_name + ' (' + \
-      case.type_of_case + ') ' + \
-      showifdef('case.date') + ' ' + \
-      showifdef('case.docket_number') for case in other_cases[:1]]) + " (See Addendum)"
----
-code: |
-  need_page1_addendum = need_cases_addendum or need_gun_addendum
----
 id: mandated reporters
 question: |
   % if who_protecting_screener == 'someone else':
@@ -943,42 +897,6 @@ code: |
     
   plaintiff_has_minor_children
 
-  # other_cases.gather()  # Ask this later
-
-  # order_defendant_stop_abuse_yes
-  # if not order_defendant_remain_away_plaintiff_residence_yes:
-  #   If_this_is_an_apartment_building_or_other_multiple_family_dwelling_check_here = DAEmpty()
-  # if not order_defendant_pay_yes:
-  #   losses_caused_by_defendant = DAEmpty()
-  #   order_defendant_pay_amount = DAEmpty()
-
-  # order_impound_plaintiff_address_residential_yes
-
-  # if no_abuse_checked:
-  #   refer_to_258E_resources
-  # if not order_other_relief_yes:
-  #   other_relief = DAEmpty()
-  # if not defendant_weapons_guns: # This needs to get moved. It appears in a jarring place right now.
-  #   defendant_weapons_description = DAEmpty()
-
-  # This comes from the main affidavit    
-  # abuse_suffered_date
-  # order_relief_ex_parte
-  
-  # # losses_caused_by_defendant_safe_for_pdf
-  # need_losses_addendum
-  # need_relief_addendum
-  # other_relief_safe_for_pdf
-  # need_cases_addendum
-  # cases_other_safe_for_pdf
-
-  # Below are only used for standalone interview
-  # signature_date 
-  # mark_unfilled_fields_empty(interview_metadata["complaint_209A_labeled_page10003"])
-  # complaint_209A_labeled_page10003_preview_question # Pre-canned preview screen
-  # basic_questions_signature_flow
-  # users[0].signature
-
   complaint_209A_labeled_page10003 = True
 ---
 code: |
@@ -1002,7 +920,6 @@ code: |
   defendant_abuse_caused_physical_harm
   defendant_abuse_caused_sexual_assault
   order_impound_plaintiff_address_school
-  need_page1_addendum
   order_page_two_relief_yes
 
   trigger_page1_computed_values = True
@@ -1014,104 +931,37 @@ code: |
       case.type_of_case + ') ' + \
       showifdef('case.date') + ' ' + \
       showifdef('case.docket_number') for case in other_cases])
-# ---
-# code: |
-#   # Refer to the first incident of abuse from the 209A affidavit question
-#   abuse_suffered_date = incident_date # Pulls from 209A_affidavit
 ---
-continue button field: complaint_209A_labeled_page10003_preview_question
-question: |
-  Placeholder preview screen
-subquestion: |
-  Here is a preview of the form you'll sign on the next page. 
-  
-   ${complaint_209A_labeled_page10003_attachment_preview}
+objects:
+  - complaint_209A_labeled_page10003_attachment: ALDocument.using(filename="CRA_Motion_to_Dismiss", title="Motion to Dismiss CRA", enabled=True, has_addendum=True, default_overflow_message=" [See addendum]")
 ---
-attachment:
-    variable name: complaint_209A_labeled_page10003_attachment_preview
-    skip undefined: True
-    name: 209A Complaint Page 1
-    filename: A_Complaint_Page_1
-    editable: False
-    pdf template file: complaint_209A_labeled_1.pdf
-    decimal places: 2    
-    fields: 
-      - "user_name_full": ${ str(users[0]) }
-      - "defendant": ${ str(other_parties[0]) }
-      - "signature_date": ${ signature_date.format("M/d/yyyy") }
-      - "municipal_court": ${ trial_court.department == "Boston Municipal Court" }
-      - "district_court": ${ trial_court.department == "District Court" }
-      - "probate_court": ${ trial_court.department == "Probate and Family Court" }
-      - "superior_court": ${ trial_court.department == "Superior Court" }
-      - "court_name_short": ${ trial_court.division }
-      - "defendant_alias": ${ other_parties[0].name_other if defendant_has_alias else '' }
-      - "defendant_weapons_description": ${ defendant_weapons_safe_for_pdf  }
-      - "defendant_gender_male": ${ other_parties[0].gender_male }
-      - "defendant_gender_female": ${ other_parties[0].gender_female }
-      - "plaintiff_is_major_yes": ${ plaintiff_is_major_yes }
-      - "plaintiff_is_major_no": ${ plaintiff_is_major_no }
-      - "defendant_and_plaintiff_relationship_married_to_each_other": ${ relationship_to_defendant_married['now'] }
-      - "defendant_and_plaintiff_relationship_formerly_married_to_each_other": ${ relationship_to_defendant_married['past'] }
-      - "plaintiff_assistant_name": ${ plaintiff_assistant_name if plaintiff_is_major_no else '' }
-      - "plaintiff_assistant_relationship_to_plaintiff": ${ plaintiff_assistant_relationship_to_plaintiff }
-      - "defendant_and_plaintiff_relationship_not_married_but_are_related": ${ defendant_and_plaintiff_relationship_not_married_but_are_related }
-      - "defendant_relationship_to_plaintiff_is": ${ defendant_relationship_to_plaintiff_is }
-      - "defendant_is_major": ${ defendant_is_major }
-      - "defendant_and_plaintiff_are_parents_of_child": ${ defendant_and_plaintiff_are_parents_of_child }
-      - "defendant_and_plaintiff_are_not_related_but_live_together": ${ defendant_and_plaintiff_are_not_related_but_live_together }
-      - "defendant_and_plaintiff_used_to_live_together": ${defendant_and_plaintiff_used_to_live_together }
-      - "defendant_and_plaintiff_are_dating_or_dated": ${ defendant_and_plaintiff_are_dating_or_dated }
-      - "plaintiff_has_minor_children_yes": ${ plaintiff_has_minor_children }
-      - "plaintiff_has_minor_children_no": ${ not plaintiff_has_minor_children }
-      - "plaintiff_and_defendant_other_case_yes": ${ plaintiff_and_defendant_other_case_yes }
-      - "plaintiff_and_defendant_other_case_no": ${ not plaintiff_and_defendant_other_case_yes }    
-      - "abuse_suffered_date": ${ incident_date }
-      - "defendant_abuse_attempted_physical_harm": ${ defendant_abuse_attempted_physical_harm }
-      - "defendant_abuse_caused_fear_of_serious_physical_harm": ${ defendant_abuse_caused_fear_of_serious_physical_harm }
-      - "defendant_abuse_caused_physical_harm": ${ defendant_abuse_caused_physical_harm }
-      - "defendant_abuse_caused_sexual_assault": ${ defendant_abuse_caused_sexual_assault }
-      - "order_defendant_stop_abuse_yes": ${ order_defendant_stop_abuse_yes }
-      - "order_defendant_no_contact_unless_court_authorized_yes": ${ order_defendant_no_contact_unless_court_authorized_yes }
-      - "order_defendant_remain_away_plaintiff_residence_yes": ${ order_defendant_remain_away_plaintiff_residence_yes }
-      # - "If_this_is_an_apartment_building_or_other_multiple_family_dwelling_check_here": ${ If_this_is_an_apartment_building_or_other_multiple_family_dwelling_check_here }
-      - "order_defendant_remain_away_plaintiff_workplace_yes": ${ order_defendant_remain_away_plaintiff_workplace_yes }
-      - "order_defendant_remain_away_plaintiff_school_yes": ${ order_defendant_remain_away_plaintiff_school_yes }
-      - "order_impound_plaintiff_address_residential_yes": ${ order_impound_plaintiff_address_residential_yes if not impound_personal_information else impound_personal_information }
-      - "order_impound_plaintiff_address_work_yes": ${ order_impound_plaintiff_address_work_yes if not impound_personal_information else impound_personal_information }
-      - "order_impound_plaintiff_address_school": ${ order_impound_plaintiff_address_school if not impound_personal_information else impound_personal_information }
-      - "order_defendant_pay_yes": ${ order_defendant_pay_yes }
-      - "order_defendant_pay_amount": ${ thousands(order_defendant_pay_amount) if  order_defendant_pay_amount else ''}
-      - "losses_caused_by_defendant": ${ losses_caused_by_defendant if order_defendant_pay_yes else '' }
-      - "order_defendant_pay_temporary_support_to_plaintiff_yes": ${ order_defendant_pay_temporary_support_to_plaintiff_yes }
-      - "order_page_two_relief_yes": ${ order_page_two_relief_yes }
-      - "order_other_relief_yes": ${ order_other_relief_yes }
-      - "other_relief_description": ${ other_relief.replace("\r","").replace("\n","") if order_other_relief_yes else '' }
-      - "order_relief_ex_parte": ${ order_relief_ex_parte }
-      - plaintiff_and_defendant_other_case_description: ${plaintiff_and_defendant_other_case_description if not need_cases_addendum else cases_other_safe_for_pdf}
-
+depends on:
+  - defendant_has_guns
+  - defendant_weapons_description
+code: |
+  defendant_weapons = comma_list(defendant_has_guns.true_values()) + space('defendant_weapons_description', prefix=' - ')
 ---
-#mandatory: True
-question: |
-  Placeholder download screen
-subquestion: |
-  Placeholder
-buttons:
-  - Exit: exit
-  - Restart: restart
-attachment code: complaint_209A_labeled_page10003_attachment
+code: |
+  complaint_209A_labeled_page10003_attachment.overflow_fields['defendant_weapons'].overflow_trigger = 40
+  complaint_209A_labeled_page10003_attachment.overflow_fields['defendant_weapons'].label = "Guns owned by defendant (continued)"
+  complaint_209A_labeled_page10003_attachment.overflow_fields['other_cases'].overflow_trigger = 1
+  complaint_209A_labeled_page10003_attachment.overflow_fields['other_cases'].label = "Other cases involving the Defendant"
+  complaint_209A_labeled_page10003_attachment.overflow_fields.gathered = True
 ---
 need: 
   - complaint_209A_labeled_page10003
-  - defendant_weapons_safe_for_pdf
+  - defendant_weapons
+  - other_cases
 attachment:
-    variable name: complaint_209A_labeled_page10003_attachment
+    variable name: complaint_209A_labeled_page10003_attachment[i]
     skip undefined: True
+    editable: False
     name: 209A Complaint Page 1
     filename: A_Complaint_Page_1
     pdf template file: complaint_209A_labeled_1.pdf
     decimal places: 2    
     fields:   
-      - "user_signature": ${ users[0].signature }
+      - "user_signature": ${ users[0].signature_if_final(i) }
       - "user_name_full": ${ str(users[0]) }
       - "defendant": ${ str(other_parties[0]) }
       - "signature_date": ${ signature_date.format("M/d/yyyy") }
@@ -1163,130 +1013,8 @@ attachment:
       - "order_other_relief_yes": ${ order_other_relief_yes }
       - "other_relief_description": ${ other_relief.replace("\r","").replace("\n","") if order_other_relief_yes  else '' }
       - "order_relief_ex_parte": ${ order_relief_ex_parte }
-      - plaintiff_and_defendant_other_case_description: ${plaintiff_and_defendant_other_case_description if not need_cases_addendum else cases_other_safe_for_pdf}
+      - plaintiff_and_defendant_other_case_description: ${plaintiff_and_defendant_other_case_description if not complaint_209A_labeled_page10003_attachment.overflow_fields['other_cases'].overflow_value() else other_cases.item(0).court_name + ' ' + other_cases.item(0).type_of_case + ' ' + other_cases.item(0).date  + ' ' + other_cases.item(0).docket_number }
 ---
 attachment:
-  - variable name: page1_addendum
+  - variable name: complaint_209A_labeled_page10003_attachment.addendum
     docx template file: 209A_page1_addendum.docx
----
-variable name: interview_metadata['complaint_209A_labeled_page10003']['built_in_fields_used']
-data:
-  - variable: user_name_full
-  - variable: defendant
-  - variable: signature_date
-  - variable: user_signature
----
-variable name: interview_metadata['complaint_209A_labeled_page10003']['field_list']
-data:
-  - variable: municipal_court
-    field_type: yesno
-  - variable: district_court
-    field_type: yesno
-  - variable: probate_court
-    field_type: yesno
-  - variable: superior_court
-    field_type: yesno
-  - variable: court_name_short
-    field_type: text
-    field_data_type: text
-  - variable: defendant_alias
-    field_type: text
-    field_data_type: text
-  - variable: defendant_gender_male
-    field_type: yesno
-  - variable: defendant_gender_female
-    field_type: yesno
-  - variable: plaintiff_is_major_yes
-    field_type: yesno
-  - variable: plaintiff_is_major_no
-    field_type: yesno
-  - variable: relationship_to_defendant_marriage_or_kids['defendant_and_plaintiff_relationship_married_to_each_other']
-    field_type: yesno
-  - variable: relationship_to_defendant_marriage_or_kids['defendant_and_plaintiff_relationship_formerly_married_to_each_other']
-    field_type: yesno
-  - variable: plaintiff_assistant_name
-    field_type: text
-    field_data_type: text
-  - variable: relationship_to_defendant_unmarried['defendant_and_plaintiff_relationship_not_married_but_are_related']
-    field_type: yesno
-    field_data_type: text
-  - variable: defendant_relationship_to_plaintiff_is
-    field_type: text
-    field_data_type: text
-  - variable: defendant_is_major
-    field_type: yesno
-  - variable: relationship_to_defendant_marriage_or_kids['defendant_and_plaintiff_are_parents_of_child']
-    field_type: yesno
-  - variable: relationship_to_defendant_unmarried['defendant_and_plaintiff_are_not_related_but_live_together']
-    field_type: yesno
-  - variable: relationship_to_defendant_unmarried['defendant_and_plaintiff_used_to_live_together']
-    field_type: yesno
-  - variable: relationship_to_defendant_unmarried['defendant_and_plaintiff_are_dating_or_dated']
-    field_type: yesno
-  - variable: plaintiff_has_minor_children
-    field_type: text
-    field_data_type: text
-  - variable: plaintiff_has_minor_children_yes
-    field_type: text
-    field_data_type: text
-  - variable: plaintiff_and_defendant_other_case_yes
-    field_type: yesno
-  - variable: abuse_suffered_date
-    field_type: text
-    field_data_type: date
-  - variable: defendant_abuse_attempted_physical_harm
-    field_type: yesno
-  - variable: defendant_abuse_caused_fear_of_serious_physical_harm
-    field_type: yesno
-  - variable: defendant_abuse_caused_physical_harm
-    field_type: yesno
-  - variable: defendant_abuse_caused_sexual_assault
-    field_type: yesno
-  - variable: order_defendant_stop_abuse_yes
-    field_type: yesno
-  - variable: order_defendant_no_contact_unless_court_authorized_yes
-    field_type: yesno
-  - variable: order_defendant_remain_away_plaintiff_residence_yes
-    field_type: yesno
-  - variable: If_this_is_an_apartment_building_or_other_multiple_family_dwelling_check_here
-    field_type: yesno
-  - variable: order_defendant_remain_away_plaintiff_workplace_yes
-    field_type: yesno
-  - variable: order_defendant_remain_away_plaintiff_school_yes
-    field_type: yesno
-  - variable: order_impound_plaintiff_address_residential_yes
-    field_type: yesno
-  - variable: order_impound_plaintiff_address_work_yes
-    field_type: yesno
-  - variable: order_impound_plaintiff_address_school
-    field_type: yesno
-  - variable: order_defendant_pay_yes
-    field_type: yesno
-  - variable: order_defendant_pay_amount
-    field_type: text
-    field_data_type: currency
-  - variable: losses_caused_by_defendant
-    field_type: area
-    field_data_type: text
-  - variable: order_defendant_pay_temporary_support_to_plaintiff_yes
-    field_type: yesno
-  - variable: order_page_two_relief_yes
-    field_type: yesno
-  - variable: order_other_relief_yes
-    field_type: yesno
-  - variable: other_relief
-    field_type: text
-    field_data_type: text
-  - variable: order_relief_ex_parte
-    field_type: yesno
-  - variable: defendant_weapons_guns
-    field_type: yesno
-  - variable: defendant_weapons_ammunition
-    field_type: yesno
-  - variable: defendant_weapons_firearms_identification_card
-    field_type: yesno
-  - variable: defendant_weapons_license_to_carry
-    field_type: yesno
-  - variable: defendant_weapons_description
-    field_type: text
-    field_data_type: text
